# bold

./: .gitignore  Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: jv30dcqv9jd68an58a4inpfan9m6624z-source  jw95mc8ni2dzx4vwbfrjs27qwd7w2wpx-source
src/: build.rs  cli.rs  compile.rs  compiler.rs  init.rs  logging.rs  main.rs  project_configuration.rs  project_root.rs  user_arguments.rs
